--- a/web/src/styles/globa.css
+++ b/web/src/styles/globa.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  outline: 0;
   box-sizing: border-box;
 }
 
 body {
-  color: #FFF;
+  color: #fff;
   background: #ebf2f5;
 }
 
