--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vh;
   background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,15 +10,19 @@
 
 #page-landing .content-wrapper {
   position: relative;
+
   width: 100%;
   max-width: 1100px;
+
   height: 100%;
   max-height: 680px;
+
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: space-between;
-  background: url('../../images/landing.svg') no-repeat 80% center ;
+
+  background: url('../../images/landing.svg') no-repeat 80% center;
 }
 
 #page-landing .content-wrapper main {
@@ -40,10 +45,13 @@
   position: absolute;
   right: 0;
   top: 0;
+
   font-size: 24px;
   line-height: 34px;
+
   display: flex;
   flex-direction: column;
+
   text-align: right;
 }
 
@@ -55,10 +63,12 @@
   position: absolute;
   right: 0;
   bottom: 0;
+
   width: 80px;
   height: 80px;
   background: #ffd666;
   border-radius: 30px;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -67,5 +77,5 @@
 }
 
 .content-wrapper .enter-app:hover {
-  background: #969eff;
+  background: #96f3ff;
 }
